--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,9 @@ body {
   background: var(--lightGray);
   color: var(--black);
 }
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
